Next Round initial code

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
     text-align:center;
 }
 
-div.letters, div.nextRound, #resetGame{
+div.letters, #nextRound, #resetGame{
     text-align: center;
 }
 
