--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ h3, h4 {
     box-shadow: 0 0 10px #00bfff; /* Add a neon glow effect */
     border: 2px solid #00bfff;
     color: #00bfff;
-
+    cursor: pointer;
 }
 
 div#letters-box.col-md-10.offset-md-1{
@@ -67,6 +67,7 @@ div.letters, #nextRound, #resetGame{
 #randomSound img{
     width:30%;
     display:block;
+    cursor: pointer;
 }
 
 div#randomSound.col-md-2{
@@ -133,6 +134,7 @@ audio{
 }
 
 #resetGame, #nextRound {
+    cursor: pointer;
     width: 200px;
     height: 50px;
     font-size: 20px;
@@ -166,7 +168,6 @@ audio{
     font-weight: bold;
     font-family: 'Arial', sans-serif; /* Replace with the desired font family */
     font-size: 24px;
-    
 }
 
 #playerA, #playerB {
